Finish refactoring Dictionary and include some tests.